<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/groups_icon"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/charts_icon"
            android:title="@string/menu_charts"/>
        <item
            android:id="@+id/nav_debit"
            android:icon="@drawable/bank_icon"
            android:title="@string/debit_description"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout"
            />
    </group>

</menu>
