<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.walli_app.walli.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--logo app-->
            <ImageView
                android:id="@+id/logo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/logo_description" />

            <com.walli_app.walli.RobotoBoldTextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:layout_below="@id/logo"
                android:textSize="28sp"
                android:text="@string/welcome"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome"
                android:hint="@string/nick_placeholder"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:hint="@string/pass_placeholder"
                android:imeActionId="@+id/sign_in"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/sign_in_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/password"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/sign_in"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/sign_in_layout">

                <Button
                    android:id="@+id/sign_up"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:text="@string/title_activity_sign_up"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/sign_up_layout">

                <com.walli_app.walli.RobotoTextView
                    android:id="@+id/restore_pwd"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/password_forgotten"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
