<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <com.walli_app.walli.RobotoBoldTextView
                android:id="@+id/chart_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:text="@string/pie_chart_title"
                />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_below="@id/chart_title"
                android:layout_width="match_parent"
                android:layout_height="260dp"/>

            <com.walli_app.walli.RobotoBoldTextView
                android:id="@+id/barchart_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pie_chart"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:text="@string/bar_chart_title"/>

            <com.walli_app.walli.RobotoTextView
                android:id="@+id/label_from_date"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_below="@id/barchart_title"
                android:layout_marginTop="5dp"
                android:text="@string/choice_from_date"/>

            <com.walli_app.walli.RobotoTextView
                android:id="@+id/from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/label_from_date"
                android:layout_toEndOf="@id/label_from_date"
                android:layout_below="@id/barchart_title"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="gg-mm-aaaaa"/>

            <com.walli_app.walli.RobotoTextView
                android:id="@+id/to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/barchart_title"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:text="gg-mm-aaaaa"/>

            <com.walli_app.walli.RobotoTextView
                android:id="@+id/label_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/barchart_title"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@id/to_date"
                android:layout_toStartOf="@id/to_date"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/choice_to_date"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/to_date"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>