<?xml version="1.0" encoding="utf-8"?>

<!-- layout schermata principale -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/ablayout"
            android:theme="@style/AppTheme.AppBarOverlay">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_below="@+id/ablayout"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/logo_description"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/group_image"
                android:src="@mipmap/default_group_image"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_vertical"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/group_image"
                android:layout_toEndOf="@+id/group_image">
                <com.walli_app.walli.RobotoItalicTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/new_group_description"
                    android:gravity="center_vertical"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/new_group_name"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_image"
                android:lines="1"
                android:maxLength="45"
                android:layout_marginTop="20dp"
                android:hint="@string/new_group_placeholder"/>
            <!--layout spinner-->
            <include layout="@layout/currency_spinner"
                android:layout_below="@id/new_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
